# cs2-instant-screenshot

./: .gitignore  README.md  items.json  pyproject.toml
cs2screenshot/: __init__.py  cli.py  decoder.py  models.py  name_resolver.py  renderer.py
cs2screenshot/protos/: __init__.py  cstrike15_gcmessages.proto  cstrike15_gcmessages_pb2.py
tests/: test_decoder.py  test_name_resolver.py  test_renderer.py
