[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs2screenshot"
version = "0.1.0"
description = "CS2 item inspect link decoder and screenshot tool"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
cs2screenshot = "cs2screenshot.cli:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
